--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="profile-section">
                     <img src="images/iris headshot.png" alt="Iris of Defi" class="profile-img">
                     <div class="profile-status">
-                        <h2>Daniel Clifford</h2>
+                        <h2>Iris Of Defi</h2>
                         <p>Verified Graduate</p>
                     </div>
                 </div>
